# QmlFromWork

./: CMakeLists.txt  Main.qml  ObjModel.qml  ObjModel.qml.autosave  WidgetItem.qml  main.cpp
ModelView/: CMakeLists.txt  Model.cpp  Model.h  Presenter.cpp  Presenter.h  View.cpp  View.h
Widgets/: BaseWidget.cpp  BaseWidget.h  CMakeLists.txt  Initializer.cpp  Initializer.h  Timer.cpp  Timer.h  WidgetOne.cpp  WidgetOne.h  WidgetThree.cpp  WidgetThree.h  WidgetTwo.cpp  WidgetTwo.h
